--- a/evals/cross_validation.ipynb
+++ b/evals/cross_validation.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "addressed-going",
+   "execution_count": 53,
+   "id": "fantastic-mountain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "adaptive-theta",
+   "execution_count": 54,
+   "id": "desirable-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -85,119 +85,119 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>all-198</th>\n",
+       "      <th>all-393</th>\n",
        "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
        "      <td>2298530</td>\n",
        "      <td>astar-seeds</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
        "      <td>250</td>\n",
-       "      <td>GTGAAACCTCGTAGATCTGACTGATCTATTTAGCGATTTTTGCACC...</td>\n",
-       "      <td>GTGAAACCTCGtAGATCTgACTGATCTATTTAGCGATTTTTGCACC...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.440</td>\n",
-       "      <td>0.060</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.011245</td>\n",
-       "      <td>0.000144</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>all-133</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
-       "      <td>align</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>TAAGACATCAACATGCTGTCGAACGTAATCACGAGCGCGGGCGGTG...</td>\n",
-       "      <td>TAAGACATCAACATGCTGTcGAACGTaATCAcGAgCGCGGGCGGTG...</td>\n",
+       "      <td>TTACAGCATTACGCCAGACCTATGAAGAGGTCCTGCGACTGGCGGT...</td>\n",
+       "      <td>TTAcAGCATTACGCCAGaCCTATGAAGAGGtCCTGCGACTGGCGGT...</td>\n",
        "      <td>4</td>\n",
        "      <td>-1</td>\n",
-       "      <td>0.624</td>\n",
+       "      <td>0.672</td>\n",
        "      <td>0.092</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.024352</td>\n",
-       "      <td>0.000873</td>\n",
+       "      <td>0.002526</td>\n",
+       "      <td>0.000151</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.716</td>\n",
+       "      <td>0.764</td>\n",
        "      <td>-1</td>\n",
-       "      <td>156.0</td>\n",
+       "      <td>168.0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-263</th>\n",
+       "      <th>all-392</th>\n",
        "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
        "      <td>2298530</td>\n",
        "      <td>astar-seeds</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
        "      <td>250</td>\n",
-       "      <td>CCAGCGCGGCGCTAAGAGCATTTGACTAGTTGGCTGAATGTAACCT...</td>\n",
-       "      <td>CCAGcGCGGCGCTAAgAGCaTTTGACtAGTTGGCTGAATGTAACCT...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>CGACGGACAGCAATACTGAAAGCATCAGTCCTCCAGAAATAAGGCC...</td>\n",
+       "      <td>CGACgGaCAGCAATACTGAAAGcATCAGTcCTCCaGAAATAAGGCC...</td>\n",
+       "      <td>5</td>\n",
        "      <td>-1</td>\n",
-       "      <td>0.964</td>\n",
-       "      <td>0.096</td>\n",
+       "      <td>1.156</td>\n",
+       "      <td>0.144</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.012079</td>\n",
-       "      <td>0.000495</td>\n",
+       "      <td>0.004610</td>\n",
+       "      <td>0.000320</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.060</td>\n",
+       "      <td>1.300</td>\n",
        "      <td>-1</td>\n",
-       "      <td>241.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-197</th>\n",
+       "      <th>all-391</th>\n",
        "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
        "      <td>2298530</td>\n",
        "      <td>astar-seeds</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
        "      <td>250</td>\n",
-       "      <td>TGTGGGAAACGCTGGGTTGAAGACGGGTTTATGCCACTGGCAGGCG...</td>\n",
-       "      <td>TGtGGgAAACGCTGGGTTGAAGAcGgGTTTATgCcACTGGCAGGCG...</td>\n",
+       "      <td>GCGACGAGGCAATATTGGCGGCGAATGTCCGGCGCTGGCGACCACG...</td>\n",
+       "      <td>GCGACGAGGCAAtATTgGCGGCGaATGTCCGGCGCTGGCGACCACG...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.002814</td>\n",
+       "      <td>0.000181</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.908</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>all-390</th>\n",
+       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
+       "      <td>2298530</td>\n",
+       "      <td>astar-seeds</td>\n",
+       "      <td>align</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>CCTTGTCCGTATGTTCCCAATCAAGTGCTGTACCGGGATTATCGAT...</td>\n",
+       "      <td>CCTTgTCCgTATGtTCCCAATCAAGTGCTGTAcCGGGATTATCGAT...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1.124</td>\n",
+       "      <td>0.136</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.003381</td>\n",
+       "      <td>0.000225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.260</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>all-389</th>\n",
+       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
+       "      <td>2298530</td>\n",
+       "      <td>astar-seeds</td>\n",
+       "      <td>align</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>ATCGGCACTGCTGATTTCACCATCCGTGCGTAAATAAAACCGGGTG...</td>\n",
+       "      <td>ATCGGCAcTGcTGATTtCACCATcCGTGCGTAAATAAAACCGGGTG...</td>\n",
        "      <td>6</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1.820</td>\n",
-       "      <td>0.200</td>\n",
+       "      <td>1.324</td>\n",
+       "      <td>0.144</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.020857</td>\n",
-       "      <td>0.000512</td>\n",
+       "      <td>0.004019</td>\n",
+       "      <td>0.000315</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.020</td>\n",
+       "      <td>1.468</td>\n",
        "      <td>-1</td>\n",
-       "      <td>455.0</td>\n",
+       "      <td>331.0</td>\n",
        "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>all-262</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
-       "      <td>align</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>TCGGCAGCGCCGACCGTCCTTAAAAACACCAGACCGAAAAGCAAGG...</td>\n",
-       "      <td>TCGGCAGCGCCGACcGTccTTAAAAAcACCAGACCGAAAAGCAAGG...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.768</td>\n",
-       "      <td>0.092</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.012243</td>\n",
-       "      <td>0.000627</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.860</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,11 +206,11 @@
       "text/plain": [
        "                                                     ref  refsize         algo operation  memory  len                                               read                                              spell  cost  starts  pushed  popped  repeat_rate    t(map)  t(astar)  unique_best  pushed+popped  generated_errors  explored_states  dist\n",
        "readname                                                                                                                                                                                                                                                                                                                                       \n",
-       "        all-198  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  GTGAAACCTCGTAGATCTGACTGATCTATTTAGCGATTTTTGCACC...  GTGAAACCTCGtAGATCTgACTGATCTATTTAGCGATTTTTGCACC...     2      -1   0.440   0.060          0.0  0.011245  0.000144            1          0.500                -1            110.0     2\n",
-       "        all-133  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  TAAGACATCAACATGCTGTCGAACGTAATCACGAGCGCGGGCGGTG...  TAAGACATCAACATGCTGTcGAACGTaATCAcGAgCGCGGGCGGTG...     4      -1   0.624   0.092          0.0  0.024352  0.000873            1          0.716                -1            156.0     4\n",
-       "        all-263  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  CCAGCGCGGCGCTAAGAGCATTTGACTAGTTGGCTGAATGTAACCT...  CCAGcGCGGCGCTAAgAGCaTTTGACtAGTTGGCTGAATGTAACCT...     4      -1   0.964   0.096          0.0  0.012079  0.000495            1          1.060                -1            241.0     4\n",
-       "        all-197  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  TGTGGGAAACGCTGGGTTGAAGACGGGTTTATGCCACTGGCAGGCG...  TGtGGgAAACGCTGGGTTGAAGAcGgGTTTATgCcACTGGCAGGCG...     6      -1   1.820   0.200          0.0  0.020857  0.000512            1          2.020                -1            455.0     6\n",
-       "        all-262  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  TCGGCAGCGCCGACCGTCCTTAAAAACACCAGACCGAAAAGCAAGG...  TCGGCAGCGCCGACcGTccTTAAAAAcACCAGACCGAAAAGCAAGG...     4      -1   0.768   0.092          0.0  0.012243  0.000627            1          0.860                -1            192.0     4"
+       "        all-393  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  TTACAGCATTACGCCAGACCTATGAAGAGGTCCTGCGACTGGCGGT...  TTAcAGCATTACGCCAGaCCTATGAAGAGGtCCTGCGACTGGCGGT...     4      -1   0.672   0.092          0.0  0.002526  0.000151            1          0.764                -1            168.0     4\n",
+       "        all-392  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  CGACGGACAGCAATACTGAAAGCATCAGTCCTCCAGAAATAAGGCC...  CGACgGaCAGCAATACTGAAAGcATCAGTcCTCCaGAAATAAGGCC...     5      -1   1.156   0.144          0.0  0.004610  0.000320            1          1.300                -1            289.0     5\n",
+       "        all-391  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  GCGACGAGGCAATATTGGCGGCGAATGTCCGGCGCTGGCGACCACG...  GCGACGAGGCAAtATTgGCGGCGaATGTCCGGCGCTGGCGACCACG...     3      -1   0.800   0.108          0.0  0.002814  0.000181            1          0.908                -1            200.0     3\n",
+       "        all-390  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  CCTTGTCCGTATGTTCCCAATCAAGTGCTGTACCGGGATTATCGAT...  CCTTgTCCgTATGtTCCCAATCAAGTGCTGTAcCGGGATTATCGAT...     4      -1   1.124   0.136          0.0  0.003381  0.000225            1          1.260                -1            281.0     4\n",
+       "        all-389  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  ATCGGCACTGCTGATTTCACCATCCGTGCGTAAATAAAACCGGGTG...  ATCGGCAcTGcTGATTtCACCATcCGTGCGTAAATAAAACCGGGTG...     6      -1   1.324   0.144          0.0  0.004019  0.000315            1          1.468                -1            331.0     6"
       ]
      },
      "metadata": {},
@@ -225,8 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "possible-evening",
+   "execution_count": 55,
+   "id": "artificial-export",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,22 +242,30 @@
     "            print(row)\n",
     "            print(r)\n",
     "            correct = False\n",
+    "    print('Checked ' + str(len(df_seeds)) + ' alignments.')\n",
     "    return correct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "heard-adelaide",
+   "execution_count": 56,
+   "id": "vocal-coaching",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checked 393 alignments.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confident-northern",
+   "id": "several-chorus",
    "metadata": {},
    "outputs": [],
    "source": []
