--- a/evals/cross_validation.ipynb
+++ b/evals/cross_validation.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "fantastic-mountain",
+   "execution_count": 2,
+   "id": "declared-direction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "desirable-bulgarian",
+   "execution_count": 3,
+   "id": "cheap-surge",
    "metadata": {},
    "outputs": [
     {
@@ -85,132 +85,132 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>all-393</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
+       "      <th>simulated.49</th>\n",
+       "      <td>graphs/pasgal-MHC1.gfa</td>\n",
+       "      <td>11611462</td>\n",
+       "      <td>astar-prefix</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>TTACAGCATTACGCCAGACCTATGAAGAGGTCCTGCGACTGGCGGT...</td>\n",
-       "      <td>TTAcAGCATTACGCCAGaCCTATGAAGAGGtCCTGCGACTGGCGGT...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>TACCAGTACCATGCTGTTTTGGTTACTGTAGCCTTGAAGTATAGTT...</td>\n",
+       "      <td>TACCAGTACCATGCTGTTTTGGTTACTGTAGCCTTGAAGTATAGTT...</td>\n",
+       "      <td>0</td>\n",
        "      <td>-1</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>0.092</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>0.66</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.002526</td>\n",
-       "      <td>0.000151</td>\n",
+       "      <td>0.040621</td>\n",
+       "      <td>0.015261</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.764</td>\n",
+       "      <td>4.75</td>\n",
        "      <td>-1</td>\n",
-       "      <td>168.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>409.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-392</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
+       "      <th>simulated.17</th>\n",
+       "      <td>graphs/pasgal-MHC1.gfa</td>\n",
+       "      <td>11611462</td>\n",
+       "      <td>astar-prefix</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>CGACGGACAGCAATACTGAAAGCATCAGTCCTCCAGAAATAAGGCC...</td>\n",
-       "      <td>CGACgGaCAGCAATACTGAAAGcATCAGTcCTCCaGAAATAAGGCC...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1.156</td>\n",
-       "      <td>0.144</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004610</td>\n",
-       "      <td>0.000320</td>\n",
+       "      <td>100</td>\n",
+       "      <td>CCTCCACATGCAGGTGCCCGTCGATCCCAGCATGACTTTGCTCTCC...</td>\n",
+       "      <td>CCTCCACATGCAGGTGCCcGTCGATCCCAGCATGACTTTGCTCTCC...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.300</td>\n",
        "      <td>-1</td>\n",
-       "      <td>289.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>9.76</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.096706</td>\n",
+       "      <td>0.051567</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.73</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>976.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-391</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
+       "      <th>simulated.18</th>\n",
+       "      <td>graphs/pasgal-MHC1.gfa</td>\n",
+       "      <td>11611462</td>\n",
+       "      <td>astar-prefix</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>GCGACGAGGCAATATTGGCGGCGAATGTCCGGCGCTGGCGACCACG...</td>\n",
-       "      <td>GCGACGAGGCAAtATTgGCGGCGaATGTCCGGCGCTGGCGACCACG...</td>\n",
-       "      <td>3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>ATGCAGTGGCACAATCTCTGTTCACTGCAGCCTCGGCCTCCCAGGC...</td>\n",
+       "      <td>ATGCAGTGGCACAATCTCTGTTCACTGCAGCCTCGGCCTCCCAGGC...</td>\n",
+       "      <td>0</td>\n",
        "      <td>-1</td>\n",
-       "      <td>0.800</td>\n",
-       "      <td>0.108</td>\n",
+       "      <td>3.82</td>\n",
+       "      <td>0.27</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.002814</td>\n",
-       "      <td>0.000181</td>\n",
+       "      <td>0.023336</td>\n",
+       "      <td>0.002372</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.908</td>\n",
+       "      <td>4.09</td>\n",
        "      <td>-1</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-390</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
+       "      <th>simulated.19</th>\n",
+       "      <td>graphs/pasgal-MHC1.gfa</td>\n",
+       "      <td>11611462</td>\n",
+       "      <td>astar-prefix</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>CCTTGTCCGTATGTTCCCAATCAAGTGCTGTACCGGGATTATCGAT...</td>\n",
-       "      <td>CCTTgTCCgTATGtTCCCAATCAAGTGCTGTAcCGGGATTATCGAT...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>TGTACCCTAAAACTTAAAGTATAATAATAATAATAATAATAATAAA...</td>\n",
+       "      <td>TGTACCCTAAAACTTAAAGTATAATAATAATAATAATAATAATAAA...</td>\n",
+       "      <td>0</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1.124</td>\n",
-       "      <td>0.136</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.39</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.003381</td>\n",
-       "      <td>0.000225</td>\n",
+       "      <td>0.035837</td>\n",
+       "      <td>0.014740</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.260</td>\n",
+       "      <td>2.95</td>\n",
        "      <td>-1</td>\n",
-       "      <td>281.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>all-389</th>\n",
-       "      <td>data/ecoli_head1000000_linear/graph.gfa</td>\n",
-       "      <td>2298530</td>\n",
-       "      <td>astar-seeds</td>\n",
+       "      <th>simulated.50</th>\n",
+       "      <td>graphs/pasgal-MHC1.gfa</td>\n",
+       "      <td>11611462</td>\n",
+       "      <td>astar-prefix</td>\n",
        "      <td>align</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>ATCGGCACTGCTGATTTCACCATCCGTGCGTAAATAAAACCGGGTG...</td>\n",
-       "      <td>ATCGGCAcTGcTGATTtCACCATcCGTGCGTAAATAAAACCGGGTG...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1.324</td>\n",
-       "      <td>0.144</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004019</td>\n",
-       "      <td>0.000315</td>\n",
+       "      <td>100</td>\n",
+       "      <td>GAGAACACAGGTAATAGGGAGAATGTAGGTAAAAAGAATCTCAACC...</td>\n",
+       "      <td>GAGAACACAGGTAATAGGGAGAATGTAGGTAAAAAGAATcTCAACC...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.468</td>\n",
        "      <td>-1</td>\n",
-       "      <td>331.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>9.96</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.099725</td>\n",
+       "      <td>0.054174</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.05</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>996.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     ref  refsize         algo operation  memory  len                                               read                                              spell  cost  starts  pushed  popped  repeat_rate    t(map)  t(astar)  unique_best  pushed+popped  generated_errors  explored_states  dist\n",
-       "readname                                                                                                                                                                                                                                                                                                                                       \n",
-       "        all-393  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  TTACAGCATTACGCCAGACCTATGAAGAGGTCCTGCGACTGGCGGT...  TTAcAGCATTACGCCAGaCCTATGAAGAGGtCCTGCGACTGGCGGT...     4      -1   0.672   0.092          0.0  0.002526  0.000151            1          0.764                -1            168.0     4\n",
-       "        all-392  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  CGACGGACAGCAATACTGAAAGCATCAGTCCTCCAGAAATAAGGCC...  CGACgGaCAGCAATACTGAAAGcATCAGTcCTCCaGAAATAAGGCC...     5      -1   1.156   0.144          0.0  0.004610  0.000320            1          1.300                -1            289.0     5\n",
-       "        all-391  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  GCGACGAGGCAATATTGGCGGCGAATGTCCGGCGCTGGCGACCACG...  GCGACGAGGCAAtATTgGCGGCGaATGTCCGGCGCTGGCGACCACG...     3      -1   0.800   0.108          0.0  0.002814  0.000181            1          0.908                -1            200.0     3\n",
-       "        all-390  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  CCTTGTCCGTATGTTCCCAATCAAGTGCTGTACCGGGATTATCGAT...  CCTTgTCCgTATGtTCCCAATCAAGTGCTGTAcCGGGATTATCGAT...     4      -1   1.124   0.136          0.0  0.003381  0.000225            1          1.260                -1            281.0     4\n",
-       "        all-389  data/ecoli_head1000000_linear/graph.gfa  2298530  astar-seeds     align     0.0  250  ATCGGCACTGCTGATTTCACCATCCGTGCGTAAATAAAACCGGGTG...  ATCGGCAcTGcTGATTtCACCATcCGTGCGTAAATAAAACCGGGTG...     6      -1   1.324   0.144          0.0  0.004019  0.000315            1          1.468                -1            331.0     6"
+       "                                    ref   refsize          algo operation  memory  len                                               read                                              spell  cost  starts  pushed  popped  repeat_rate    t(map)  t(astar)  unique_best  pushed+popped  generated_errors  explored_states  dist\n",
+       "readname                                                                                                                                                                                                                                                                                                                        \n",
+       "   simulated.49  graphs/pasgal-MHC1.gfa  11611462  astar-prefix     align     0.0  100  TACCAGTACCATGCTGTTTTGGTTACTGTAGCCTTGAAGTATAGTT...  TACCAGTACCATGCTGTTTTGGTTACTGTAGCCTTGAAGTATAGTT...     0      -1    4.09    0.66          0.0  0.040621  0.015261            1           4.75                -1            409.0     0\n",
+       "   simulated.17  graphs/pasgal-MHC1.gfa  11611462  astar-prefix     align     0.0  100  CCTCCACATGCAGGTGCCCGTCGATCCCAGCATGACTTTGCTCTCC...  CCTCCACATGCAGGTGCCcGTCGATCCCAGCATGACTTTGCTCTCC...     1      -1    9.76    0.97          0.0  0.096706  0.051567            1          10.73                -1            976.0     1\n",
+       "   simulated.18  graphs/pasgal-MHC1.gfa  11611462  astar-prefix     align     0.0  100  ATGCAGTGGCACAATCTCTGTTCACTGCAGCCTCGGCCTCCCAGGC...  ATGCAGTGGCACAATCTCTGTTCACTGCAGCCTCGGCCTCCCAGGC...     0      -1    3.82    0.27          0.0  0.023336  0.002372            1           4.09                -1            382.0     0\n",
+       "   simulated.19  graphs/pasgal-MHC1.gfa  11611462  astar-prefix     align     0.0  100  TGTACCCTAAAACTTAAAGTATAATAATAATAATAATAATAATAAA...  TGTACCCTAAAACTTAAAGTATAATAATAATAATAATAATAATAAA...     0      -1    2.56    0.39          0.0  0.035837  0.014740            1           2.95                -1            256.0     0\n",
+       "   simulated.50  graphs/pasgal-MHC1.gfa  11611462  astar-prefix     align     0.0  100  GAGAACACAGGTAATAGGGAGAATGTAGGTAAAAAGAATCTCAACC...  GAGAACACAGGTAATAGGGAGAATGTAGGTAAAAAGAATcTCAACC...     1      -1    9.96    1.09          0.0  0.099725  0.054174            1          11.05                -1            996.0     1"
       ]
      },
      "metadata": {},
@@ -220,13 +220,17 @@
    "source": [
     "df_seeds = read_astarix_performance('results/ecoli_illumina250_astar-seeds.tsv')\n",
     "df_base = read_astarix_performance('results/ecoli_illumina250_astar-prefix.tsv')\n",
+    "\n",
+    "df_seeds = read_astarix_performance('results/MHC1-astarix-prefix/alignments.tsv')\n",
+    "df_base = read_astarix_performance('results/MHC1-astarix-seeds/alignments.tsv')\n",
+    "\n",
     "display(df_seeds.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "artificial-export",
+   "execution_count": 4,
+   "id": "expanded-fundamentals",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,15 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "vocal-coaching",
+   "execution_count": 5,
+   "id": "found-corrections",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checked 393 alignments.\n"
+      "Checked 100 alignments.\n"
      ]
     },
     {
@@ -265,7 +269,7 @@
        "True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-chorus",
+   "id": "skilled-cabin",
    "metadata": {},
    "outputs": [],
    "source": []
